degraph zur Strukturanalyse eingeführt
Signed-off-by: FunThomas424242 <funthomas424242@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
 			<version>2.5</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/de.schauderhaft.degraph/degraph-check -->
+		<dependency>
+			<groupId>de.schauderhaft.degraph</groupId>
+			<artifactId>degraph-check</artifactId>
+			<version>0.1.2</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
